[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/matrix_codex/CodexMenu.gd" type="Script" id=1]
[ext_resource path="res://addons/matrix_codex/ArcaniteLogo.png" type="Texture" id=2]

[node name="MatrixCodex" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -130.0
margin_right = 159.0
margin_bottom = 129.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
window_title = "Codex Menu"
resizable = true
script = ExtResource( 1 )
_sections_unfolded = [ "Popup", "Script" ]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="SelectionContainer" type="VBoxContainer" parent="HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 167.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0

[node name="EntryList" type="ItemList" parent="HBoxContainer/SelectionContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 167.0
margin_bottom = 227.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [  ]
select_mode = 0
allow_reselect = false
icon_mode = 1
fixed_icon_size = Vector2( 16, 16 )
_sections_unfolded = [ "Columns", "Icon" ]

[node name="NewEntryButton" type="Button" parent="HBoxContainer/SelectionContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 231.0
margin_right = 167.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Entry"
flat = false
align = 1

[node name="EntryInspector" type="VBoxContainer" parent="HBoxContainer"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 171.0
margin_right = 338.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Image" type="TextureRect" parent="HBoxContainer/EntryInspector"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 167.0
margin_bottom = 114.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Size Flags" ]

[node name="Title" type="Label" parent="HBoxContainer/EntryInspector"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 118.0
margin_right = 167.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Entry Name"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Description" type="RichTextLabel" parent="HBoxContainer/EntryInspector"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 136.0
margin_right = 167.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
bbcode_enabled = false
bbcode_text = "Description!"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Description!"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Size Flags" ]

[connection signal="item_activated" from="HBoxContainer/SelectionContainer/EntryList" to="." method="_on_EntryList_item_activated"]
[connection signal="pressed" from="HBoxContainer/SelectionContainer/NewEntryButton" to="." method="_on_NewEntryButton_pressed"]
